Remove use of Boolean.valueOf(boolean), which is new to JDK 1.4.