@@ -204,8 +204,8 @@ public class FileMatchPattern implements Cloneable, XMLTags
         {
             rootNode = doc.createElement(FILE_MATCH_PATTERN_TAG);
             rootNode.setAttribute(MATCH_PATTERN_TAG,   mMatchPattern);
-            rootNode.setAttribute(INCLUDE_PATTERN_TAG, 
-                                  Boolean.valueOf(mIsIncludePattern).toString());
+            Boolean pattern = new Boolean(mIsIncludePattern);
+            rootNode.setAttribute(INCLUDE_PATTERN_TAG, pattern.toString());
         }
         catch (DOMException e)
         {
